--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,24 +11,22 @@ bind-key C-a last-window
 # bind-key ` last-window
 # bind-key a send-prefix
 
-# we might need ` at some point, allow switching
-# we can also send the prefix char with `-a
+# Just for fun, let's keep switchable binds
 bind-key F11 set-option -g prefix C-a
-bind-key F12 set-option -g prefix `
+bind-key F12 set-option -g prefix C-b
 
-# 0 is too far from ` ;)
-set -g base-index 1
+set -g base-index 0
 
 set-option -g default-terminal "screen-256color"
-set-option -g mouse-select-pane on
-set-option -g status-keys vi
+# set-option -g mouse-select-pane on
+# set-option -g status-keys vi
 set-option -g bell-action any
 set-option -g set-titles on
 set-option -g set-titles-string '#H:#S.#I.#P #W #T' # window number,program name,active (or not)
 set-option -g visual-bell off
 
-setw -g mode-keys vi
-setw -g mode-mouse on
+# setw -g mode-keys vi
+# setw -g mode-mouse on
 setw -g monitor-activity on
 
 bind e previous-window
@@ -39,7 +37,7 @@ bind F swap-window -t +1
 # bind k down-pane
 
 set-option -g status-utf8 on
-# set-option -g status-justify centre
+set-option -g status-justify centre
 set-option -g status-justify left
 set-option -g status-bg black
 set-option -g status-fg white
@@ -54,7 +52,7 @@ set-option -g pane-border-bg black
 set-option -g message-fg black
 set-option -g message-bg green
 
-#setw -g mode-bg black
+setw -g mode-bg black
 
 setw -g window-status-bg black
 setw -g window-status-current-fg green
@@ -70,7 +68,7 @@ set -g status-left '#[fg=red]#H#[fg=green]:#[fg=white]#S #[fg=green]['
 # set -g status-right '#[fg=green]][#[fg=white] #T #[fg=green]][ #[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]'
 
 set -g status-interval 5
-set -g status-right '#[fg=green]] [#(tmux-mem-cpu-load --colors 5)#[fg=green]] #[fg=green][#[fg=yellow]%H:%M#[fg=green]] #[default]'
+set -g status-right '#[fg=green]] [#(tmux-mem-cpu-load --colors 5)#[fg=green]] #[fg=green][#[fg=yellow]%H:%M#[fg=green]]#[default]'
 
 set -g history-limit 4096
 
